Added the information of the pages and their images

--- a/Week-01/index.html
+++ b/Week-01/index.html
@@ -19,7 +19,7 @@
                 <hr>
             </ol>
 
-        <H1>Get in touch</H1>
+        <h2>Get in touch</h2>
         <hr>
         <p>Lorem ipsum is simply dummy text of the priotin and typesetting industry.
         Lorem ipsum has been the instrys standar dummy text ever since the 1500s,
@@ -37,5 +37,67 @@
             <hr>
 
         </nav>
+            <!--Information the page-->
+        <h2>Time tracket for teams</h2>
+        <h3>Lorem ipsum dolor sit amet</h3>
+        <p>Quisque sagittis orci ut diam codimentum, vel equismod
+            erat placerat. In iaculis arcu eros, eget tempus orci
+            facilissi id.Lorem ipsum dolor sit amet, consectetur
+            adipiscing elit. Ut et massa mi. Aliquam in hendrerit
+            urna. Pellestesque sit amet sapien fringilla, mattis
+            ligula consectetur, ultrices mauris. Maecenas vitae
+            mattis tellus. Nullam quis imperdiet augue. Vestibulum
+            auctor onare leo.</p>
+        <img src="image/Principal.png" alt="image principal">
+            <button>LEARN MORE</button>
+            <hr>
+        <h2>FUNCTIONS</h2>
+        <h3>Track work hours</h3>
+        <img src="image/Track work hours.png" alt="Image oclock">
+        <p>Lorem ipsum dolor sit amet consectetur adipiscing elit Ut
+            massa mi. Aliquam in hendrerit urna. Pellestesque sit amet
+            sapien fringilla, mattis ligula consectetur, ultices mautis,
+            Maecenas vitae mattis tellus..</p>
+        <h3>Reports</h3>
+        <img src="image/Reports.png" alt="Image Reports">
+        <p>Lorem ipsum dolor sit amet consectetur adipiscing elit Ut
+            massa mi. Aliquam in hendrerit urna. Pellestesque sit amet
+            sapien fringilla, mattis ligula consectetur, ultices mautis,
+            Maecenas vitae mattis tellus..</p>
+        <h3>Management</h3>
+        <img src="image/Management.png" alt="Image Management">
+        <p>Lorem ipsum dolor sit amet consectetur adipiscing elit Ut
+            massa mi. Aliquam in hendrerit urna. Pellestesque sit amet
+            sapien fringilla, mattis ligula consectetur, ultices mautis,
+            Maecenas vitae mattis tellus..</p>
+        <h3>Multiple roles</h3>
+        <img src="image/Multiple roles.png" alt="Image Multiple roles">
+        <p>Lorem ipsum dolor sit amet consectetur adipiscing elit Ut
+            massa mi. Aliquam in hendrerit urna. Pellestesque sit amet
+            sapien fringilla, mattis ligula consectetur, ultices mautis,
+            Maecenas vitae mattis tellus..</p>
+            <hr>
+        <h2>Why track time with Trackgenix?</h2>
+        <h3>Boost Productivity</h3>
+        <img src="image/Boost Productivity.png" alt="image Boost productivity">
+        <p>Loren ipsum dolor sit amet consectetur adipiscing elit Ut et massa mi.
+            Aliquam in hendrerit urna. Pellentesque sit amet sapien dcveve f vesv
+            vev.</p>
+        <h3>Manage team</h3>
+        <img src="image/Manage team.png" alt="image Manage team">
+        <p>Loren ipsum dolor sit amet consectetur adipiscing elit Ut et massa mi.
+            Aliquam in hendrerit urna. Pellentesque sit amet sapien dcveve f vesv
+            vev.</p>
+        <h3>Business intelligence</h3>
+        <img src="image/Business intelligence.png" alt="image Businees intelligence">
+        <p>Loren ipsum dolor sit amet consectetur adipiscing elit Ut et massa mi.
+            Aliquam in hendrerit urna. Pellentesque sit amet sapien dcveve f vesv
+            vev.</p>
+            <h3>Decision-making</h3>
+            <img src="image/Decision-making.png" alt="image Decision-making">
+            <p>Loren ipsum dolor sit amet consectetur adipiscing elit Ut et massa mi.
+                Aliquam in hendrerit urna. Pellentesque sit amet sapien dcveve f vesv
+                vev.</p>
+                <hr>
     </body>
 </html>
