added image and iformation of about us

--- a/Week-01/index.html
+++ b/Week-01/index.html
@@ -37,7 +37,9 @@
             <hr>
 
         </nav>
+
             <!--Information the page-->
+
         <h2>Time tracket for teams</h2>
         <h3>Lorem ipsum dolor sit amet</h3>
         <p>Quisque sagittis orci ut diam codimentum, vel equismod
@@ -99,5 +101,89 @@
                 Aliquam in hendrerit urna. Pellentesque sit amet sapien dcveve f vesv
                 vev.</p>
                 <hr>
+
+        <!--form creation-->
+
+        <form action="">
+            <div>
+                <label>Nombre</label>
+                <input type="text" placeholder="Ingrese su nombre">
+            </div>
+            <div>
+                <label>Email</label>
+                <input type="text" placeholder="Ingrese su email">
+            </div>
+            <label>Area</label>
+            <select>
+                <option value="Area">Area</option>
+            </select>
+            <h4>Message</h4>
+            <div>
+                <label>Descripción</label>
+                <textarea name="description"></textarea>
+            </div>
+            <input type="submit" value="Submit">
+            <input type="submit" value="Reset">
+        </form>
+            <hr>
+
+        <!--about us creation-->
+
+        <h2>About us</h2>
+        <h3>Lorem</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+            Ur et massa mi. Aliquam in hendrerit uma. Pellestesque
+            sit amet sapien fringila, mattis ligula consectetur,
+            ultrices mauris. Maecenas vitae mattis tellus. Nullam
+            quis imperdiente augue. Vestibulum auctor ornare leo,
+            non suscipit. Lorem ipsum dolor sit amer, consectetur
+            adopiscing elit. Ut et massa mi. Aliquam in hendrerit
+            uma. Pellestesque sit amet.</p>
+        <h3>Amet Aungue</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+            aliquam in hendrerit uma. Pellestesque sit amet sapien
+            frigilla, mattis ligula consectetur, ultrices mauris.
+            Maecenas vitae mattis tellus. Nullam qy¿uis imperdiet
+            augue. Vestibulam auctor omare leo, non suscriprit magna
+            interdum eu</p>
+        <h3>Lorem</h3>
+        <img src="image/About us.jpg" alt="image of people">
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+            aliquam in hendrerit uma. Pellestesque sit amet sapien
+            frigilla, mattis ligula consectetur, ultrices mauris.
+            Maecenas vitae mattis tellus. Nullam qyuis imperdiet
+            augue. Vestibulam auctor omare leo, non suscriprit magna
+            interdum eu.</p>
+            <hr>
+
+        <!---->
+        
+            <div>
+                <h3>Product</h3>
+                <ol>
+                    <li>Functionalities</li>
+                    <li>Intregrations</li>
+                    <li>Download</li>
+                    <li>Extra</li>
+                    </ol>
+            </div>
+            <div>
+                <h3>Company</h3>
+                <ol>
+                    <li>About us</li>
+                    <li>Customers</li>
+                    <li>Resource</li>
+                    <li>Blog</li>
+                    </ol>
+            </div>
+            <div>
+                <h3>Support</h3>
+                <ol>
+                    <li>Help</li>
+                    <li>Tutorials</li>
+                    <li>Api</li>
+                    <li>Constac</li>
+                    </ol>
+            </div>
     </body>
 </html>
