added footer in the page and information in Readme

--- a/Week-01/index.html
+++ b/Week-01/index.html
@@ -19,7 +19,7 @@
                 <hr>
             </ol>
 
-        <h2>Get in touch</h2>
+        <h1>Get in touch</h1>
         <hr>
         <p>Lorem ipsum is simply dummy text of the priotin and typesetting industry.
         Lorem ipsum has been the instrys standar dummy text ever since the 1500s,
@@ -38,7 +38,7 @@
 
         </nav>
 
-            <!--Information the page-->
+        <!--Information the page-->
 
         <h2>Time tracket for teams</h2>
         <h3>Lorem ipsum dolor sit amet</h3>
@@ -156,8 +156,6 @@
             interdum eu.</p>
             <hr>
 
-        <!---->
-        
             <div>
                 <h3>Product</h3>
                 <ol>
@@ -184,6 +182,20 @@
                     <li>Api</li>
                     <li>Constac</li>
                     </ol>
+                    <hr>
             </div>
+            <hr>
+
+        <!--Footer the page-->
+
+        <footer>
+            <img src="image/facebook_icon.png" alt=" facebook icon">
+            <img src="image/linkedin_icon.png" alt="Linkedin icon">
+            <img src="image/twitter_icon.png" alt="Twitter icon">
+            <img src="image/instagram_social.png" alt="Instagram icon">
+            <img src="image/github-logo_icon.png" alt="Github icon">
+                <p>Montevide, Uruguay</p>
+                <p>Copyright 2022 GigaTech Software Solutions SA</p>
+        </footer>
     </body>
 </html>
