--- a/Week-03/index.html
+++ b/Week-03/index.html
@@ -9,32 +9,34 @@
     <link rel="stylesheet" href="/css/style.css" />
   </head>
   <body>
+    <input type="text" placeholder="search" class="search">
     <h1>Trackgenix</h1>
+    <section class="section-menu">
     <aside>
-      <input type="text">
-      <ol>
-        <li>Home</li>
-        <li>Sing Up</li>
-        <li>Log in</li>
-      </ol>
-      <h2>Get in touch</h2>
-      <p>
+      <il class="list">
+        <lo class="home">Home</lo>
+        <lo class="sing-up">Sing Up</lo>
+        <lo class="log-in">Log in</lo>
+      </il>
+      <h2 class="title-0">Get in touch</h2>
+      <p class="p-0">
         Lorem ipsum is simply dummy text of the priotin and typesetting
         industry. Lorem ipsum has been the instrys standar dummy text ever since
         the 1500s, when an unknown printer took a gallery of type and scramble
         it to make a type specimen book.
       </p>
       <address>
-        <img src="image/home.png" alt="image home">
-        <p>1245 sffeinvrjrs, Bnaudasd</p>
-        <img src="image/mail.png" alt="image email">
-        <p>sikfifkgnmss@gmail.com</p>
-        <img src="image/phone.png" alt="image phone">
-        <p>958585412225</p>
+        <img src="image/home.png" alt="image home" class="image-1">
+        <p class="p-address">1245 sffeinvrjrs, Bnaudasd</p>
+        <img src="image/mail.png" alt="image email" class="image-2">
+        <p class="p-address">sikfifkgnmss@gmail.com</p>
+        <img src="image/phone.png" alt="image phone" class="image-3">
+        <p class="p-address">958585412225</p>
       </address>
     </aside>
+  </section>
     <main>
-      <section>
+      <section class="section-1">
         <img src="image/principal.png" alt="image principal" class="first-image">
         <h2 class="title-1">Time tracket for teams</h2>
         <h3 class="subtitle-1">Lorem ipsum dolor sit amet</h3>
@@ -48,98 +50,74 @@
         </p>
         <a href="...">LEARN MORE</a>
       </section>
-      <section>
+      <section class="section-2">
         <h2 class="title-2">FUNCTIONS</h2>
-        <h3>Track work hours</h3>
-        <img src="image/track-work-hours.png" alt="Image oclock">
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipiscing elit Ut massa mi.
-          Aliquam in hendrerit urna. Pellestesque sit amet sapien fringilla,
-          mattis ligula consectetur, ultices mautis, Maecenas vitae mattis
-          tellus..
-        </p>
-        <h3>Reports</h3>
-        <img src="image/reports.png" alt="Image Reports">
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipiscing elit Ut massa mi.
-          Aliquam in hendrerit urna. Pellestesque sit amet sapien fringilla,
-          mattis ligula consectetur, ultices mautis, Maecenas vitae mattis
-          tellus..
-        </p>
-        <h3>Management</h3>
-        <img src="image/management.png" alt="Image Management">
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipiscing elit Ut massa mi.
-          Aliquam in hendrerit urna. Pellestesque sit amet sapien fringilla,
-          mattis ligula consectetur, ultices mautis, Maecenas vitae mattis
-          tellus..
-        </p>
-        <h3>Multiple roles</h3>
-        <img src="image/multiple-roles.png" alt="Image Multiple roles">
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipiscing elit Ut massa mi.
-          Aliquam in hendrerit urna. Pellestesque sit amet sapien fringilla,
-          mattis ligula consectetur, ultices mautis, Maecenas vitae mattis
-          tellus..
-        </p>
-      </section>
-      <section>
-        <h2>Why track time with Trackgenix?</h2>
-        <h3>Boost Productivity</h3>
-        <img
-          src="image/boost-productivity.png" alt="image Boost productivity">
-        <p>
-          Loren ipsum dolor sit amet consectetur adipiscing elit Ut et massa mi.
-          Aliquam in hendrerit urna. Pellentesque sit amet sapien dcveve f vesv
-          vev.
-        </p>
-        <h3>Manage team</h3>
-        <img src="image/manage-team.png" alt="image Manage team">
-        <p>
-          Loren ipsum dolor sit amet consectetur adipiscing elit Ut et massa mi.
-          Aliquam in hendrerit urna. Pellentesque sit amet sapien dcveve f vesv
-          vev.
-        </p>
-        <h3>Business intelligence</h3>
-        <img src="image/business-intelligence.png" alt="image Businees intelligence">
-        <p>
-          Loren ipsum dolor sit amet consectetur adipiscing elit Ut et massa mi.
-          Aliquam in hendrerit urna. Pellentesque sit amet sapien dcveve f vesv
-          vev.
-        </p>
-        <h3>Decision-making</h3>
-        <img src="image/decision-making.png" alt="image Decision-making">
-        <p>
-          Loren ipsum dolor sit amet consectetur adipiscing elit Ut et massa mi.
-          Aliquam in hendrerit urna. Pellentesque sit amet sapien dcveve f vesv
-          vev.
-        </p>
-      </section>
-      <form>
         <div>
-          <label>Nombre</label>
-          <input type="text" placeholder="Ingrese su nombre">
-        </div>
+        <h3 class="subtitle-2">Track work hours</h3>
+        <img src="image/track-work-hours.png" alt="Image oclock" class="image-left">
+        <p class="p-2">
+          Lorem ipsum dolor sit amet consectetur adipiscing elit Ut massa mi.
+          Aliquam in hendrerit urna. Pellestesque sit amet sapien fringilla,
+          mattis ligula consectetur, ultices mautis, Maecenas vitae mattis
+          tellus..
+        </p>
+      </div>
+      <div>
+        <h3 class="subtitle-3">Reports</h3>
+        <img src="image/reports.png" alt="Image Reports" class="image-left">
+        <p class="p-3">
+          Lorem ipsum dolor sit amet consectetur adipiscing elit Ut massa mi.
+          Aliquam in hendrerit urna. Pellestesque sit amet sapien fringilla,
+          mattis ligula consectetur, ultices mautis, Maecenas vitae mattis
+          tellus..
+        </p>
+      </div>
+      <div>
+        <h3 class="subtitle-4">Management</h3>
+        <img src="image/management.png" alt="Image Management" class="image-left">
+        <p class="p-4">
+          Lorem ipsum dolor sit amet consectetur adipiscing elit Ut massa mi.
+          Aliquam in hendrerit urna. Pellestesque sit amet sapien fringilla,
+          mattis ligula consectetur, ultices mautis, Maecenas vitae mattis
+          tellus..
+        </p>
+      </div>
+      <div>
+        <h3 class="subtitle-5">Multiple roles</h3>
+        <img src="image/multiple-roles.png" alt="Image Multiple roles" class="image-left">
+        <p class="p-5">
+          Lorem ipsum dolor sit amet consectetur adipiscing elit Ut massa mi.
+          Aliquam in hendrerit urna. Pellestesque sit amet sapien fringilla,
+          mattis ligula consectetur, ultices mautis, Maecenas vitae mattis
+          tellus..
+        </p>
+      </div>
+      </section>
+      <section class="section-3">
+        <h2 class="title-3">Why track time with Trackgenix?</h2>
+        <img src="image/boost-productivity.png" alt="image Boost productivity" class="image-right">
+        <img src="image/manage-team.png" alt="image Manage team" class="image-right">
+        <img src="image/business-intelligence.png" alt="image Businees intelligence" class="image-right">
+        <img src="image/decision-making.png" alt="image Decision-making" class="image-right">
+      </section>
+      <h2 class="title-4">Contact Us</h2>
+      <form class="form-contact">
         <div>
-          <label>Email</label>
-          <input type="text" placeholder="Ingrese su email">
-        </div>
-        <label>Area</label>
-        <select>
+          <input type="text" placeholder="Nombre" class="name">
+          <input type="text" placeholder="Email" class="email">
+        <select class="selection">
           <option value="Area">Area</option>
-          <option value="Area">Manager</option>
-          <option value="Area">Owner</option>
+          <option>Manager</option>
+          <option>Owner</option>
         </select>
-        <h4>Message</h4>
-        <div>
-          <label>Descripción</label>
-          <textarea name="description"></textarea>
+        <h4 class="title-message">Message</h4>
+          <textarea name="description" class="description" placeholder="text"></textarea>
+          <input type="submit" value="Submit" class="btn-submit">
+          <input type="submit" value="Reset" class="btn-reset">
         </div>
-        <input type="submit" value="Submit">
-        <input type="submit" value="Reset">
       </form>
-      <section>
-        <h2>About us</h2>
+      <section class="section-4">
+        <h2 class="title-5">About us</h2>
         <h3>Lorem</h3>
         <p>
           Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ur et massa
@@ -166,8 +144,9 @@
           qyuis imperdiet augue. Vestibulam auctor omare leo, non suscriprit
           magna interdum eu.
         </p>
-        <section>
-          <section>
+        </section>
+        <section class="section-5">
+          <section class="sect-product">
             <h3>Product</h3>
             <ol>
               <li>Functionalities</li>
@@ -176,7 +155,7 @@
               <li>Extra</li>
             </ol>
           </section>
-          <section>
+          <section class="sect-company">
             <h3>Company</h3>
             <ol>
               <li>About us</li>
@@ -185,17 +164,16 @@
               <li>Blog</li>
             </ol>
           </section>
-          <section>
+          <section class="sect-support">
             <h3>Support</h3>
             <ol>
               <li>Help</li>
               <li>Tutorials</li>
               <li>Api</li>
-              <li>Constac</li>
+              <li>Contact</li>
             </ol>
           </section>
         </section>
-      </section>
     </main>
     <footer>
       <img src="image/facebook-icon.png" alt=" facebook icon">
@@ -203,8 +181,8 @@
       <img src="image/twitter-icon.png" alt="Twitter icon">
       <img src="image/instagram-social.png" alt="Instagram icon">
       <img src="image/github-logo-icon.png" alt="Github icon">
-      <p>Montevide, Uruguay</p>
-      <p>Copyright 2022 GigaTech Software Solutions SA</p>
+      <p class="text-footer">Montevide, Uruguay</p>
+      <p class="text-footer">Copyright 2022 GigaTech Software Solutions SA</p>
     </footer>
   </body>
 </html>
