BaSP-W03-2022: Modified html and css

--- a/Week-03/index.html
+++ b/Week-03/index.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <input type="text" placeholder="search" class="search">
-    <h1>Trackgenix</h1>
+    <h1>Trackgenix <span class="first-title">by GigaTech Software Solutions SA</span></h1>
     <section class="section-menu">
     <aside>
       <il class="list">
@@ -117,6 +117,7 @@
         </div>
       </form>
       <section class="section-4">
+        <div>
         <h2 class="title-5">About us</h2>
         <h3>Lorem</h3>
         <p>
@@ -136,14 +137,27 @@
           magna interdum eu
         </p>
         <h3>Lorem</h3>
-        <img src="image/about-us.jpg" alt="image of people">
-        <p>
+        <img src="image/about-us.jpg" alt="image of people" class="img-people">
+        <p class="lorem">
           Lorem ipsum dolor sit amet, consectetur adipiscing elit. aliquam in
+          hendrerit uma. Pellestesque sit amet sapien frigilla, mattis ligula
+          consectetur, ultrices mauris. Maecenas vitae mattis tellus. Nullam
+          qyuis imperdiet augue. Vestibulam auctor omare leo, non suscriprit
+          magna interdum eu.orem ipsum dolor sit amet, consectetur adipiscing elit. aliquam in
+          hendrerit uma. Pellestesque sit amet sapien frigilla, mattis ligula
+          consectetur, ultrices mauris. Maecenas vitae mattis tellus. Nullam
+          qyuis imperdiet augue. Vestibulam auctor omare leo, non suscriprit
+          magna interdum eu.orem ipsum dolor sit amet, consectetur adipiscing elit. aliquam in
+          hendrerit uma. Pellestesque sit amet sapien frigilla, mattis ligula
+          consectetur, ultrices mauris. Maecenas vitae mattis tellus. Nullam
+          qyuis imperdiet augue. Vestibulam auctor omare leo, non suscriprit
+          magna interdum eu.orem ipsum dolor sit amet, consectetur adipiscing elit. aliquam in
           hendrerit uma. Pellestesque sit amet sapien frigilla, mattis ligula
           consectetur, ultrices mauris. Maecenas vitae mattis tellus. Nullam
           qyuis imperdiet augue. Vestibulam auctor omare leo, non suscriprit
           magna interdum eu.
         </p>
+      </div>
         </section>
         <section class="section-5">
           <section class="sect-product">
@@ -176,11 +190,11 @@
         </section>
     </main>
     <footer>
-      <img src="image/facebook-icon.png" alt=" facebook icon">
-      <img src="image/linkedin-icon.png" alt="Linkedin icon">
-      <img src="image/twitter-icon.png" alt="Twitter icon">
-      <img src="image/instagram-social.png" alt="Instagram icon">
-      <img src="image/github-logo-icon.png" alt="Github icon">
+      <img src="image/facebook-icon.png" alt=" facebook icon" class="img-icon">
+      <img src="image/linkedin-icon.png" alt="Linkedin icon" class="img-icon">
+      <img src="image/twitter-icon.png" alt="Twitter icon" class="img-icon">
+      <img src="image/instagram-social.png" alt="Instagram icon" class="img-icon">
+      <img src="image/github-logo-icon.png" alt="Github icon" class="img-icon">
       <p class="text-footer">Montevide, Uruguay</p>
       <p class="text-footer">Copyright 2022 GigaTech Software Solutions SA</p>
     </footer>
