--- a/Week-04/index.html
+++ b/Week-04/index.html
@@ -14,6 +14,7 @@
   </head>
   <body>
     <h1 class="header">Trackgenix <span class="first-title">by GigaTech Software Solutions SA</span></h1>
+    <a href="aside"><img src="image/navbar.png" alt="image menu" class="manu"></a>
     <aside class="navbar">
       <input type="text" placeholder="search" class="search">
       <section class="section-menu"></section>
@@ -23,7 +24,7 @@
         <li class="log-in">Log in</li>
       </ol>
       <h2 class="title-0">Get in touch</h2>
-      <p class="p-0">
+      <p class="p">
         Lorem ipsum is simply dummy text of the priotin and typesetting
         industry. Lorem ipsum has been the instrys standar dummy text ever since
         the 1500s, when an unknown printer took a gallery of type and scramble
@@ -44,58 +45,55 @@
         <img src="image/principal.png" alt="image principal" class="first-image">
         <h2 class="title-1">Time tracket for teams</h2>
         <h3 class="subtitle-1">Lorem ipsum dolor sit amet</h3>
-        <p class="p-1">
-          Quisque sagittis orci ut diam codimentum, vel equismod erat placerat.
-          In iaculis arcu eros, eget tempus orci facilissi id.Lorem ipsum dolor
-          sit amet, consectetur adipiscing elit. Ut et massa mi. Aliquam in
-          hendrerit urna. Pellestesque sit amet sapien fringilla, mattis ligula
-          consectetur, ultrices mauris. Maecenas vitae mattis tellus. Nullam
-          quis imperdiet augue. Vestibulum auctor onare leo.
+        <p class="p">
+          Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when 
+an unknown printer took a galley of type and scrambled it to make a type specimen book.
         </p>
         <a href="..." class="buttom">LEARN MORE</a>
       </section>
       <section class="section-2">
-        <h2 class="title-2">FUNCTIONS</h2>
-        <div>
+        <h2 class="title-2">Functions</h2>
+        <div class="Functions">
         <h3 class="subtitle-2">Track work hours</h3>
         <img src="image/track-work-hours.png" alt="Image oclock" class="image-left">
-        <p class="p-2">
+      </div>
+        <p class="p">
           Lorem ipsum dolor sit amet consectetur adipiscing elit Ut massa mi.
           Aliquam in hendrerit urna. Pellestesque sit amet sapien fringilla,
           mattis ligula consectetur, ultices mautis, Maecenas vitae mattis
           tellus..
         </p>
-      </div>
-      <div>
+      <div class="Functions">
         <h3 class="subtitle-3">Reports</h3>
         <img src="image/reports.png" alt="Image Reports" class="image-left">
-        <p class="p-3">
+      </div>
+        <p class="p">
           Lorem ipsum dolor sit amet consectetur adipiscing elit Ut massa mi.
           Aliquam in hendrerit urna. Pellestesque sit amet sapien fringilla,
           mattis ligula consectetur, ultices mautis, Maecenas vitae mattis
           tellus..
         </p>
-      </div>
-      <div>
+      <div class="Functions">
         <h3 class="subtitle-4">Management</h3>
         <img src="image/management.png" alt="Image Management" class="image-left">
-        <p class="p-4">
+      </div>
+        <p class="p">
           Lorem ipsum dolor sit amet consectetur adipiscing elit Ut massa mi.
           Aliquam in hendrerit urna. Pellestesque sit amet sapien fringilla,
           mattis ligula consectetur, ultices mautis, Maecenas vitae mattis
           tellus..
         </p>
       </div>
-      <div>
+      <div class="Functions">
         <h3 class="subtitle-5">Multiple roles</h3>
         <img src="image/multiple-roles.png" alt="Image Multiple roles" class="image-left">
-        <p class="p-5">
+      </div>
+        <p class="p">
           Lorem ipsum dolor sit amet consectetur adipiscing elit Ut massa mi.
           Aliquam in hendrerit urna. Pellestesque sit amet sapien fringilla,
           mattis ligula consectetur, ultices mautis, Maecenas vitae mattis
           tellus..
         </p>
-      </div>
       </section>
       <section class="section-3">
         <h2 class="title-3">Why track time with Trackgenix?</h2>
@@ -105,8 +103,8 @@
         <img src="image/decision-making.png" alt="image Decision-making" class="image-right">
       </section>
       <h2 class="title-4">Contact Us</h2>
-      <form class="form-contact">
-        <div>
+      <form>
+        <div class="form-contact">
           <input type="text" placeholder="Nombre" class="name">
           <input type="text" placeholder="Email" class="email">
         <select class="selection">
@@ -123,43 +121,20 @@
       <section class="section-4">
         <div>
         <h2 class="title-5">About us</h2>
-        <h3>Lorem</h3>
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ur et massa
-          mi. Aliquam in hendrerit uma. Pellestesque sit amet sapien fringila,
-          mattis ligula consectetur, ultrices mauris. Maecenas vitae mattis
-          tellus. Nullam quis imperdiente augue. Vestibulum auctor ornare leo,
-          non suscipit. Lorem ipsum dolor sit amer, consectetur adopiscing elit.
-          Ut et massa mi. Aliquam in hendrerit uma. Pellestesque sit amet.
-        </p>
-        <h3>Amet Aungue</h3>
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. aliquam in
-          hendrerit uma. Pellestesque sit amet sapien frigilla, mattis ligula
-          consectetur, ultrices mauris. Maecenas vitae mattis tellus. Nullam
-          qy¿uis imperdiet augue. Vestibulam auctor omare leo, non suscriprit
-          magna interdum eu
-        </p>
-        <h3>Lorem</h3>
         <img src="image/about-us.jpg" alt="image of people" class="img-people">
-        <p class="lorem">
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. aliquam in
-          hendrerit uma. Pellestesque sit amet sapien frigilla, mattis ligula
-          consectetur, ultrices mauris. Maecenas vitae mattis tellus. Nullam
-          qyuis imperdiet augue. Vestibulam auctor omare leo, non suscriprit
-          magna interdum eu.orem ipsum dolor sit amet, consectetur adipiscing elit. aliquam in
-          hendrerit uma. Pellestesque sit amet sapien frigilla, mattis ligula
-          consectetur, ultrices mauris. Maecenas vitae mattis tellus. Nullam
-          qyuis imperdiet augue. Vestibulam auctor omare leo, non suscriprit
-          magna interdum eu.orem ipsum dolor sit amet, consectetur adipiscing elit. aliquam in
-          hendrerit uma. Pellestesque sit amet sapien frigilla, mattis ligula
-          consectetur, ultrices mauris. Maecenas vitae mattis tellus. Nullam
-          qyuis imperdiet augue. Vestibulam auctor omare leo, non suscriprit
-          magna interdum eu.orem ipsum dolor sit amet, consectetur adipiscing elit. aliquam in
-          hendrerit uma. Pellestesque sit amet sapien frigilla, mattis ligula
-          consectetur, ultrices mauris. Maecenas vitae mattis tellus. Nullam
-          qyuis imperdiet augue. Vestibulam auctor omare leo, non suscriprit
-          magna interdum eu.
+        <h3 class="container-title-about">Lorem</h3>
+        <p class="p">
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut et massa mi.
+          Aliquam in hendrerit urna. Pellentesque sit amet sapien fringilla, mattis
+          ligula consectetur, ultrices mauris. Maecenas vitae mattis tellus. Nullam
+          quis imperdiet augue. Vestibulum auctor ornare leo, non suscipit .
+        </p>
+        <h3 class="container-title-about">Amet Aungue</h3>
+        <p class="p">
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut et massa mi.
+          Aliquam in hendrerit urna. Pellentesque sit amet sapien fringilla, mattis
+          ligula consectetur, ultrices mauris. Maecenas vitae mattis tellus. Nullam
+          quis imperdiet augue. Vestibulum auctor ornare leo, non suscipit magna interdum eu.
         </p>
       </div>
         </section>
