BaSP-W04-2022: Work the style of the page using css with flexbox and media query.

--- a/Week-04/index.html
+++ b/Week-04/index.html
@@ -5,16 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Trackgenix</title>
+    <link rel="stylesheet" href="/css/reset.css">
     <link rel="stylesheet" href="css/header.css">
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/sidebar.css">
     <link rel="stylesheet" href="css/footer.css">
-    <link rel="stylesheet" href="/css/style.css">
-    <link rel="stylesheet" href="/css/reset.css">
+    <link rel="stylesheet" href="css/style.css">
+
   </head>
   <body>
     <h1 class="header">Trackgenix <span class="first-title">by GigaTech Software Solutions SA</span></h1>
-    <a href="aside"><img src="image/navbar.png" alt="image menu" class="manu"></a>
+    <a href="aside" class="manu"><img src="image/navbar.png" alt="image menu"></a>
     <aside class="navbar">
       <input type="text" placeholder="search" class="search">
       <section class="section-menu"></section>
@@ -114,8 +115,10 @@ an unknown printer took a galley of type and scrambled it to make a type specime
         </select>
         <h4 class="title-message">Message</h4>
           <textarea name="description" class="description" placeholder="text"></textarea>
+          <div>
           <input type="submit" value="Submit" class="btn-submit">
           <input type="submit" value="Reset" class="btn-reset">
+        </div>
         </div>
       </form>
       <section class="section-4">
