--- a/Week-04/index.html
+++ b/Week-04/index.html
@@ -143,12 +143,17 @@
       <div class="container-section-4">
         <h2 class="title-5">About us</h2>
         <h3 class="container-title-about">Lorem</h3>
+      </div>
+        <div class="container-about-us">
         <p class="container-p-about">
           Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut et massa mi.
           Aliquam in hendrerit urna. Pellentesque sit amet sapien fringilla, mattis
           ligula consectetur, ultrices mauris. Maecenas vitae mattis tellus. Nullam
           quis imperdiet augue. Vestibulum auctor ornare leo, non suscipit .
         </p>
+        <img src="image/about-us.jpg" alt="image of people" class="container-img-about">
+        </div>
+        <div>
         <h3 class="container-title-about">Amet Aungue</h3>
         <p class="container-p-about">
           Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut et massa mi.
@@ -156,9 +161,8 @@
           ligula consectetur, ultrices mauris. Maecenas vitae mattis tellus. Nullam
           quis imperdiet augue. Vestibulum auctor ornare leo, non suscipit magna interdum eu.
         </p>
-        <div>
+        <div class="container-lorem">
         <h3 class="container-title-about">Lorem</h3>
-        <img src="image/about-us.jpg" alt="image of people" class="img-people">
         <p class="container-p-about">
         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut et massa mi. Aliquam in
         endrerit urna. Pellentesque sit amet sapien fringilla, mattis ligula consectetur, ultrices mauris.
@@ -170,8 +174,8 @@
         Pellentesque sit amet sapien fringilla, mattis ligula consectetur, ultrices mauris. Maecenas vitae mattis tellus.
          Nullam quis imperdiet augue. Vestibulum auctor ornare leo, non suscipit .Lorem ipsum dolor sit amet, consectetur adipiscing e
         </p>
-      </div>
-      <div>
+      <div class="container-about-text">
+        <img src="image/about-us.jpg" alt="image of people" class="img-people">
         <p class="container-p-about">
           Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut et massa mi. Aliquam in
           endrerit urna. Pellentesque sit amet sapien fringilla, mattis ligula consectetur, ultrices mauris.
@@ -183,7 +187,6 @@
           Pellentesque sit amet sapien fringilla, mattis ligula consectetur, ultrices mauris. Maecenas vitae mattis tellus.
            Nullam quis imperdiet augue. Vestibulum auctor ornare leo, non suscipit .Lorem ipsum dolor sit amet, consectetur adipiscing e
           </p>
-          <img src="image/about-us.jpg" alt="image of people" class="img-people">
           <p class="container-p-about">
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut et massa mi. Aliquam in
             endrerit urna. Pellentesque sit amet sapien fringilla, mattis ligula consectetur, ultrices mauris.
@@ -195,6 +198,22 @@
             Pellentesque sit amet sapien fringilla, mattis ligula consectetur, ultrices mauris. Maecenas vitae mattis tellus.
              Nullam quis imperdiet augue. Vestibulum auctor ornare leo, non suscipit .Lorem ipsum dolor sit amet, consectetur adipiscing e
             </p>
+         </div>
+         <div class="container-p">
+         <p class="container-p-about">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut et massa mi. Aliquam in
+            endrerit urna. Pellentesque sit amet sapien fringilla, mattis ligula consectetur, ultrices mauris.
+            Maecenas vitae mattis tellus. Nullam quis imperdiet augue. Vestibulum auctor ornare leo, non suscipit.
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut et massa mi. Aliquam in hendrerit urna.
+            Pellentesque sit amet sapien fringilla, mattis ligula consectetur, ultrices mauris. Maecenas vitae
+            mattis tellus. Nullam quis imperdiet augue. Vestibulum auctor ornare leo, non suscipit.
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut et massa mi. Aliquam in hendrerit urna.
+            Pellentesque sit amet sapien fringilla, mattis ligula consectetur, ultrices mauris. Maecenas vitae mattis tellus.
+             Nullam quis imperdiet augue. Vestibulum auctor ornare leo, non suscipit .Lorem ipsum dolor sit amet, consectetur adipiscing e
+            </p>
+            <img src="image/about-us.jpg" alt="image of people" class="img-people">
+          </div>
+          </div>
           </div>
       </div>
     </section>
